Change log for zeit.web
=======================

POSTDEPLOY
----------


3.132 (unreleased)
------------------

- ZON-4488: Clear floating elements before liveblog


3.131 (2018-03-13)
------------------

- BUG-830: Change adlabel placement in AMP

- MAINT: Remove unused feature toggle `access_status_webtrekk`

- FIX: Toggle mobile ZON adlabel


3.130 (2018-03-09)
------------------

- ZON-4459: Inject SSO ID into the DOM to be consumed by Webtrekk

- ZON-4465: Small fixes for brandeins parquet


3.129.1 (2018-03-13)
--------------------

- TMS-187: Call TMS intextlink endpoint only once when rendering an article page


3.129 (2018-03-08)
------------------

- ZON-4483: iPhoneX landscape-fix

- BUG-815: Remove misplaced ad tile on ZAR homepage


3.128 (2018-03-07)
------------------

- ZON-4398: Do not render Adlabel (it is served by IQD now)

- BUG-864: Support Gallery in ZAR

- BUG-860: Fix dpa-articles w/o images

- MAINT: Remove unused referrerCount script

- MAINT: Hide titles from servicebox icons

- MAINT: Add default values for (solr) proxy


3.127.1 (2018-03-02)
--------------------

- HOTFIX: Do not use default param in JS function (because of IE11)


3.127 (2018-03-02)
------------------

- TMS-162: Use ITMSContent instead of LazyProxy for TMS and ES query results

- FIX: Request `ressort` and `id` as solr result so LazyProxy can use it


3.126 (2018-02-27)
------------------

- ZON-4487: Track placeholders in AMP articles

- ZON-4442: Consider liveblog version in AMP styles

- ZON-4465: Add brandeins feed to parquet

- ZON-4479: Change color of brandeins badge

- FIX: Move D18 badge styling from svg to css


3.125 (2018-02-26)
------------------

- ZON-4479: Show logo on brandeins teasers

- ZON-4480: Fontsize API for Apps

- BUG-858: Fix Campus debatebox infiltration by banner

- FIX: Fix color of brandeins teaser badge and ZAR logo


3.124 (2018-02-22)
------------------

- ZON-4466: Remove yellow border from Arbeit in ressort navigation
