@@ -10,6 +10,8 @@ POSTDEPLOY
 
 - ZON-4488: Clear floating elements before liveblog
 
+- MAINT: Stop sending proxy KeyError to Bugsnag
+
 
 3.131 (2018-03-13)
 ------------------
